--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -7,6 +7,7 @@ DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 RootSolvers = "7181ea78-2dcb-4de3-ab41-2b8ab5a31e74"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
+YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
 DiffEqBase = "5, 6"
