CompatHelper: bump compat for RRTMGP to 0.8, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -65,7 +65,7 @@ LambertW = "0.4"
 NCDatasets = "0.11, 0.12"
 NVTX = "0.3"
 OrdinaryDiffEq = "5, 6"
-RRTMGP = "0.7"
+RRTMGP = "0.7, 0.8"
 RootSolvers = "0.2, 0.3"
 StaticArrays = "1"
 StatsBase = "0.33"
