--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -113,7 +113,7 @@ steps:
         artifact_paths: "single_column_radiative_equilibrium_allsky_idealized_clouds/*"
 
       - label: ":computer: single column non-orographic gravity wave parameterization"
-        command: 
+        command:
           - julia --color=yes --project=examples examples/hybrid/driver.jl --hyperdiff false --config column --initial_condition IsothermalProfile --non_orographic_gravity_wave true --t_end 1500secs --dt 500secs --dt_save_to_disk 500secs --job_id single_column_nonorographic_gravity_wave --regression_test true
           - julia --color=yes --project=examples regression_tests/test_mse.jl --job_id single_column_nonorographic_gravity_wave --out_dir single_column_nonorographic_gravity_wave
         artifact_paths: "single_column_nonorographic_gravity_wave/*"
@@ -204,13 +204,12 @@ steps:
           - julia --color=yes --project=examples regression_tests/test_mse.jl --job_id sphere_first_upwind_ssp_baroclinic_wave_rhoe_equilmoist --out_dir sphere_first_upwind_ssp_baroclinic_wave_rhoe_equilmoist
         artifact_paths: "sphere_first_upwind_ssp_baroclinic_wave_rhoe_equilmoist/*"
 
-      - label: ":computer: SSP 1st-order all upwind baroclinic wave (ρe_tot) equilmoist"
+      - label: ":computer: SSP 1st-order tracer & energy upwind baroclinic wave (ρe_tot) equilmoist"
         command:
-          - julia --color=yes --project=examples examples/hybrid/driver.jl --initial_condition MoistBaroclinicWave --moist equil --precip_model 0M --job_id sphere_first_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist --regression_test true --dt 450secs --dt_save_to_disk 5days --ode_algo SSP333 --tracer_upwinding first_order --energy_upwinding first_order --density_upwinding first_order
-          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir sphere_first_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist --out_dir sphere_first_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist
-          - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_first_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist --fig_dir sphere_first_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist --case_name moist_baroclinic_wave
-          - julia --color=yes --project=examples regression_tests/test_mse.jl --job_id sphere_first_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist --out_dir sphere_first_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist
-        artifact_paths: "sphere_first_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist/*"
+          - julia --color=yes --project=examples examples/hybrid/driver.jl --initial_condition MoistBaroclinicWave --moist equil --precip_model 0M --job_id sphere_first_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist --dt 450secs --dt_save_to_disk 5days --ode_algo SSP333 --tracer_upwinding first_order --energy_upwinding first_order --regression_test true
+          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir sphere_first_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist --out_dir sphere_first_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist
+          - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_first_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist --fig_dir sphere_first_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist --case_name moist_baroclinic_wave
+        artifact_paths: "sphere_first_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist/*"
 
       - label: ":computer: SSP 3rd-order tracer upwind baroclinic wave (ρe_tot) equilmoist"
         command:
@@ -220,13 +219,12 @@ steps:
           - julia --color=yes --project=examples regression_tests/test_mse.jl --job_id sphere_third_upwind_ssp_baroclinic_wave_rhoe_equilmoist --out_dir sphere_third_upwind_ssp_baroclinic_wave_rhoe_equilmoist
         artifact_paths: "sphere_third_upwind_ssp_baroclinic_wave_rhoe_equilmoist/*"
 
-      - label: ":computer: SSP 3rd-order all upwind baroclinic wave (ρe_tot) equilmoist"
+      - label: ":computer: SSP 3rd-order tracer & energy upwind baroclinic wave (ρe_tot) equilmoist"
         command:
-          - julia --color=yes --project=examples examples/hybrid/driver.jl --initial_condition MoistBaroclinicWave --moist equil --precip_model 0M --job_id sphere_third_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist --regression_test true --dt 450secs --dt_save_to_disk 5days --ode_algo SSP333 --tracer_upwinding third_order --energy_upwinding third_order --density_upwinding third_order
-          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir sphere_third_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist --out_dir sphere_third_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist
-          - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_third_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist --fig_dir sphere_third_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist --case_name moist_baroclinic_wave
-          - julia --color=yes --project=examples regression_tests/test_mse.jl --job_id sphere_third_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist --out_dir sphere_third_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist
-        artifact_paths: "sphere_third_all_upwind_ssp_baroclinic_wave_rhoe_equilmoist/*"
+          - julia --color=yes --project=examples examples/hybrid/driver.jl --initial_condition MoistBaroclinicWave --moist equil --precip_model 0M --job_id sphere_third_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist --dt 450secs --dt_save_to_disk 5days --ode_algo SSP333 --tracer_upwinding third_order --energy_upwinding third_order --regression_test true
+          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir sphere_third_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist --out_dir sphere_third_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist
+          - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_third_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist --fig_dir sphere_third_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist --case_name moist_baroclinic_wave
+        artifact_paths: "sphere_third_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist/*"
 
       - label: ":computer: no lim ARS baroclinic wave (ρe) equilmoist check conservation float64"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --moist equil --initial_condition MoistBaroclinicWave --rad clearsky --job_id sphere_baroclinic_wave_rhoe_equilmoist_conservation_ft64 --check_conservation true --FLOAT_TYPE Float64 --dt 450secs --t_end 8days --dt_save_to_disk 8days --apply_limiter false"
@@ -277,13 +275,12 @@ steps:
           - julia --color=yes --project=examples regression_tests/test_mse.jl --job_id sphere_ssp_first_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --out_dir sphere_ssp_first_upwind_held_suarez_rhoe_equilmoist_hightop_sponge
         artifact_paths: "sphere_ssp_first_upwind_held_suarez_rhoe_equilmoist_hightop_sponge/*"
 
-      - label: ":computer: SSP 1st-order all upwind held suarez (ρe) equilmoist hightop sponge"
+      - label: ":computer: SSP 1st-order tracer & energy upwind held suarez (ρe) equilmoist hightop sponge"
         command:
-          - julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --dz_bottom 300 --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --rayleigh_sponge true --alpha_rayleigh_uh 0 --viscous_sponge true --zd_rayleigh 30e3 --zd_viscous 30e3 --job_id sphere_ssp_first_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --dt 450secs --t_end 5days --dt_save_to_disk 5days --ode_algo SSP333 --regression_test true --tracer_upwinding first_order --energy_upwinding first_order --density_upwinding first_order
-          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir sphere_ssp_first_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --out_dir sphere_ssp_first_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge
-          - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_ssp_first_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --fig_dir sphere_ssp_first_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --case_name moist_held_suarez
-          - julia --color=yes --project=examples regression_tests/test_mse.jl --job_id sphere_ssp_first_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --out_dir sphere_ssp_first_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge
-        artifact_paths: "sphere_ssp_first_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge/*"
+          - julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --dz_bottom 300 --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --rayleigh_sponge true --alpha_rayleigh_uh 0 --viscous_sponge true --zd_rayleigh 30e3 --zd_viscous 30e3 --job_id sphere_ssp_first_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --dt 450secs --t_end 5days --dt_save_to_disk 5days --ode_algo SSP333 --tracer_upwinding first_order --energy_upwinding first_order --regression_test true
+          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir sphere_ssp_first_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --out_dir sphere_ssp_first_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge
+          - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_ssp_first_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --fig_dir sphere_ssp_first_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --case_name moist_held_suarez
+        artifact_paths: "sphere_ssp_first_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge/*"
 
       - label: ":computer: SSP 3rd-order tracer upwind held suarez (ρe) equilmoist hightop sponge"
         command:
@@ -293,13 +290,12 @@ steps:
           - julia --color=yes --project=examples regression_tests/test_mse.jl --job_id sphere_ssp_third_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --out_dir sphere_ssp_third_upwind_held_suarez_rhoe_equilmoist_hightop_sponge
         artifact_paths: "sphere_ssp_third_upwind_held_suarez_rhoe_equilmoist_hightop_sponge/*"
 
-      - label: ":computer: SSP 3rd-order all upwind held suarez (ρe) equilmoist hightop sponge"
+      - label: ":computer: SSP 3rd-order tracer & energy upwind held suarez (ρe) equilmoist hightop sponge"
         command:
-          - julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --dz_bottom 300 --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --rayleigh_sponge true --alpha_rayleigh_uh 0 --viscous_sponge true --zd_rayleigh 30e3 --zd_viscous 30e3 --job_id sphere_ssp_third_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --dt 450secs --t_end 5days --dt_save_to_disk 5days --ode_algo SSP333 --regression_test true --tracer_upwinding third_order --energy_upwinding third_order --density_upwinding third_order
-          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir sphere_ssp_third_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --out_dir sphere_ssp_third_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge
-          - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_ssp_third_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --fig_dir sphere_ssp_third_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --case_name moist_held_suarez
-          - julia --color=yes --project=examples regression_tests/test_mse.jl --job_id sphere_ssp_third_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --out_dir sphere_ssp_third_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge
-        artifact_paths: "sphere_ssp_third_all_upwind_held_suarez_rhoe_equilmoist_hightop_sponge/*"
+          - julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --dz_bottom 300 --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --rayleigh_sponge true --alpha_rayleigh_uh 0 --viscous_sponge true --zd_rayleigh 30e3 --zd_viscous 30e3 --job_id sphere_ssp_third_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --dt 450secs --t_end 5days --dt_save_to_disk 5days --ode_algo SSP333 --tracer_upwinding third_order --energy_upwinding third_order --regression_test true
+          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir sphere_ssp_third_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --out_dir sphere_ssp_third_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge
+          - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_ssp_third_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --fig_dir sphere_ssp_third_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --case_name moist_held_suarez
+        artifact_paths: "sphere_ssp_third_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge/*"
 
   - group: "Sphere Examples (Aquaplanet)"
     steps:
