--- a/Project.toml
+++ b/Project.toml
@@ -75,6 +75,7 @@ RootSolvers = "0.2, 0.3"
 StaticArrays = "1"
 StatsBase = "0.33"
 SurfaceFluxes = "0.6"
+TerminalLoggers = "0.1"
 Thermodynamics = "0.10"
 YAML = "0.4"
 julia = "1.7"
