CompatHelper: add new compat entry for ArtifactWrappers at version 0.2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -47,6 +47,7 @@ Thermodynamics = "b60c26fb-14c3-4610-9d3e-2d17fe7ff00c"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
+ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
 ClimaComms = "0.3"
 ClimaCore = "0.10"
