Add compat entries for some deps

--- a/Project.toml
+++ b/Project.toml
@@ -47,7 +47,9 @@ Thermodynamics = "b60c26fb-14c3-4610-9d3e-2d17fe7ff00c"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
+ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
+CLIMAParameters = "0.7"
 ClimaComms = "0.3"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
@@ -75,6 +77,7 @@ RootSolvers = "0.2, 0.3"
 StaticArrays = "1"
 StatsBase = "0.33"
 SurfaceFluxes = "0.6"
+TerminalLoggers = "0.1"
 Thermodynamics = "0.10"
 YAML = "0.4"
 julia = "1.7"
