--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -84,18 +84,18 @@ steps:
         agents:
           slurm_mem: 20GB
 
-      - label: ":balloon: SCM EDMF Bomex (Default: Newton's method) dt5 tend240m"
+      - label: ":balloon: SCM EDMF Bomex (Default: Newton's method) dt2 tend60m"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config column --turbconv edmf --debugging_tc true
           --FLOAT_TYPE Float64 --hyperdiff false --apply_limiter false
           --turbconv_case Bomex --subsidence Bomex --edmf_coriolis Bomex --ls_adv Bomex
           --z_elem 60 --z_stretch false --z_max 3e3
-          --t_end 240mins --dt_save_to_sol 1mins --dt_save_to_disk 1mins
+          --t_end 60mins --dt_save_to_sol 1mins --dt_save_to_disk 1mins
           --moist equil
-          --job_id edmf_bomex_dt5_tend240m
-          --dt 5secs
-        artifact_paths: "edmf_bomex_dt5_tend240m/*"
+          --job_id edmf_bomex_dt2_tend60m
+          --dt 2secs
+        artifact_paths: "edmf_bomex_dt2_tend60m/*"
         agents:
           slurm_mem: 20GB
 
