Update RRTMGP compat

--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -89,7 +89,7 @@ OrderedCollections = "1.4"
 OrdinaryDiffEq = "5, 6"
 PoissonRandom = "0.4"
 PrettyTables = "1.3, 2"
-RRTMGP = "0.7"
+RRTMGP = "0.7, 0.8"
 RootSolvers = "0.2, 0.3"
 SciMLBase = "1"
 StaticArrays = "1"
