--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -97,7 +97,7 @@ PoissonRandom = "0.4"
 PrettyTables = "1.3, 2"
 ProgressLogging = "0.1"
 QuadGK = "2.4"
-RRTMGP = "0.7"
+RRTMGP = "0.7, 0.8"
 ReportMetrics = "0.2"
 RootSolvers = "0.2, 0.3"
 SciMLBase = "1"
