--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -213,6 +213,8 @@ steps:
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_zalesak_upwind_ssp_baroclinic_wave_rhoe_equilmoist --fig_dir sphere_zalesak_upwind_ssp_baroclinic_wave_rhoe_equilmoist
           - julia --color=yes --project=examples regression_tests/test_mse.jl --job_id sphere_zalesak_upwind_ssp_baroclinic_wave_rhoe_equilmoist --out_dir sphere_zalesak_upwind_ssp_baroclinic_wave_rhoe_equilmoist
         artifact_paths: "sphere_zalesak_upwind_ssp_baroclinic_wave_rhoe_equilmoist/*"
+        agents:
+          slurm_mem: 20GB
 
       - label: ":computer: no lim ARS baroclinic wave (ρe) equilmoist check conservation float64"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --moist equil --initial_condition MoistBaroclinicWave --rad clearsky --job_id sphere_baroclinic_wave_rhoe_equilmoist_conservation_ft64 --check_conservation true --FLOAT_TYPE Float64 --dt 450secs --t_end 8days --dt_save_to_disk 8days --apply_limiter false"
@@ -277,6 +279,8 @@ steps:
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_ssp_zalesak_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --fig_dir sphere_ssp_zalesak_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --case_name moist_held_suarez
           - julia --color=yes --project=examples regression_tests/test_mse.jl --job_id sphere_ssp_zalesak_upwind_held_suarez_rhoe_equilmoist_hightop_sponge --out_dir sphere_ssp_zalesak_upwind_held_suarez_rhoe_equilmoist_hightop_sponge
         artifact_paths: "sphere_ssp_zalesak_upwind_held_suarez_rhoe_equilmoist_hightop_sponge/*"
+        agents:
+          slurm_mem: 20GB
 
   - group: "Sphere Examples (Aquaplanet)"
     steps:
