--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -64,48 +64,60 @@ Thermodynamics = "b60c26fb-14c3-4610-9d3e-2d17fe7ff00c"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
-ArgParse = "1.1"
+ArgParse = "1"
 ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
 BlockArrays = "0.16"
-CLIMAParameters = "0.4, 0.5, 0.6, 0.7"
+CairoMakie = "0.10"
 ClimaComms = "0.3"
 ClimaCommsMPI = "0.3"
 ClimaCore = "0.10"
+ClimaCoreMakie = "0.3"
 ClimaCorePlots = "0.2"
+ClimaCoreSpectra = "0.1"
+ClimaCoreTempestRemap = "0.3"
 ClimaCoreVTK = "0.6, 0.7"
+CLIMAParameters = "0.7"
 ClimaTimeSteppers = "0.7"
 CloudMicrophysics = "0.10"
+Colors = "0.12"
 Dierckx = "0.5"
+DiffEqBase = "6"
 DiffEqCallbacks = "2"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4, 0.5"
 ForwardDiff = "0.10"
-Glob = "1.3"
+Glob = "1"
+ImageFiltering = "0.7"
 Insolation = "0.3"
+Interpolations = "0.14"
 IntervalSets = "0.5, 0.6, 0.7"
 JLD2 = "0.4"
 JSON = "0.21"
 LambertW = "0.4"
 NCDatasets = "0.11, 0.12"
 NCRegressionTests = "0.2"
-OrderedCollections = "1.4"
+NVTX = "0.3"
+OrderedCollections = "1"
 OrdinaryDiffEq = "5, 6"
-Plots = "1.27"
+Pkg = "1"
+Plots = "1"
 PoissonRandom = "0.4"
-PrettyTables = "1.3, 2"
+PrettyTables = "1, 2"
 ProgressLogging = "0.1"
-QuadGK = "2.4"
-RRTMGP = "0.7, 0.8"
+QuadGK = "2"
 ReportMetrics = "0.2"
 RootSolvers = "0.2, 0.3"
+RRTMGP = "0.7, 0.8"
 SciMLBase = "1"
 StaticArrays = "1"
 StatsBase = "0.33"
 SurfaceFluxes = "0.6"
 TerminalLoggers = "0.1"
 Thermodynamics = "0.10"
+TOML = "1"
+YAML = "0.4"
 julia = "1.7"
 
 [extras]
