--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -70,25 +70,25 @@ URIs = "5c2747f8-b7ea-4ff2-ba2e-563bfd36b1d4"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
-ArgParse = "1.1"
+ArgParse = "1"
 ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
-CLIMAParameters = "0.4, 0.5, 0.6, 0.7"
+CLIMAParameters = "0.7"
 ClimaCore = "0.10"
 ClimaTimeSteppers = "0.7"
 Dierckx = "0.5"
-DiffEqBase = "5, 6"
+DiffEqBase = "6"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4, 0.5"
-Glob = "1.3"
+Glob = "1"
 JSON = "0.21"
 LambertW = "0.4"
 NCDatasets = "0.11, 0.12"
-OrderedCollections = "1.4"
+OrderedCollections = "1"
 OrdinaryDiffEq = "5, 6"
 PoissonRandom = "0.4"
-PrettyTables = "1.3, 2"
+PrettyTables = "1, 2"
 RRTMGP = "0.7, 0.8"
 RootSolvers = "0.2, 0.3"
 SciMLBase = "1"
