--- a/test/Project.toml
+++ b/test/Project.toml
@@ -69,11 +69,11 @@ Thermodynamics = "b60c26fb-14c3-4610-9d3e-2d17fe7ff00c"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
-ArgParse = "1.1"
+ArgParse = "1"
 ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
 BlockArrays = "0.16"
-CLIMAParameters = "0.4, 0.5, 0.6, 0.7"
+CLIMAParameters = "0.7"
 ClimaComms = "0.3"
 ClimaCommsMPI = "0.3"
 ClimaCore = "0.10"
@@ -82,14 +82,14 @@ ClimaCoreVTK = "0.6, 0.7"
 ClimaTimeSteppers = "0.7"
 CloudMicrophysics = "0.10"
 Dierckx = "0.5"
-DiffEqBase = "5, 6"
+DiffEqBase = "6"
 DiffEqCallbacks = "2"
 DiffEqNoiseProcess = "5.9"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4, 0.5"
 ForwardDiff = "0.10"
-Glob = "1.3"
+Glob = "1"
 Insolation = "0.3"
 IntervalSets = "0.5, 0.6, 0.7"
 JLD2 = "0.4"
@@ -97,13 +97,13 @@ JSON = "0.21"
 LambertW = "0.4"
 NCDatasets = "0.11, 0.12"
 NCRegressionTests = "0.2"
-OrderedCollections = "1.4"
+OrderedCollections = "1"
 OrdinaryDiffEq = "5, 6"
-Plots = "1.27"
+Plots = "1"
 PoissonRandom = "0.4"
-PrettyTables = "1.3, 2"
+PrettyTables = "1, 2"
 ProgressLogging = "0.1"
-QuadGK = "2.4"
+QuadGK = "2"
 RRTMGP = "0.7, 0.8"
 ReportMetrics = "0.2"
 RootSolvers = "0.2, 0.3"
